# Vesper

./: .gitignore  Dockerfile  Environment Variables.env  LICENSE  MANIFEST.in  README.md  _config.yml  compose.yaml  docker-compose.yaml  index.html  index.md  installation.md  params.json  pyproject.toml  pyproject_full.toml  pyproject_slim.toml  requirements.txt  requirements_all.txt  setup.py  tutorial.md  vesper-dev.yaml
_includes/: figure.html  test.html
conda_recipe/: meta.yaml
docker/: Dockerfile  Dockerfile.editable-vesper  Dockerfile.non-editable-vesper  docker-compose.template.yaml
docs/: README.txt  conf.py  faq.rst  index.rst  installation.rst  tutorial.rst
ipython/: Bat Data.ipynb  Coarse Classification Results.ipynb  Conservative 4-Species Classifier Results.ipynb  Conservative 6-Species Classifier Results.ipynb  NFC Detection.ipynb  Species Classification.ipynb
preferences/: .gitignore  Preferences.json  Preferences.yaml
preferences/Classification Command Sets/: Calls.txt
scripts/: .gitignore  analyze_clip_csv_files.py  analyze_find_clip_start_indices_log.py  analyze_mpg_ranch_2016_find_clip_start_indices_logs.py  analyze_mpg_ranch_find_clip_start_indices_logs.py  choose_station_names.py  compare_clip_metadata_csv_files.py  compare_detected_clips.py  compare_directories.py  compare_nfc_data_directories.py  compare_recording_file_csv_files.py  compare_resampling_methods.py  compare_wave_and_flac_reads.py  complete_clip_counts.py  compute_aggregated_grams.py  count_clip_start_indices.py  count_clips.py  create_2018_mpg_ranch_archive_data_yaml.py  create_archive_data_yaml.py  create_archive_from_old_bird_data.py  create_audio_file.py  create_call_noise_classifier.py  create_call_noise_clip_dataset.py  create_call_noise_segment_classifier.py  create_clip_counts_csv_file.py  create_clip_zip_files.py  create_clips_hdf5_files.py  create_clips_yaml.py  create_datasets_from_hdf5_files.py  create_datasets_from_hdf5_files_2019.py  create_deferred_database_writes_file.py  create_detector_clip_counts_csv_file.py  create_nfc_bounding_interval_annotator_tfrecord_files.py  create_nfc_bounds_marker_tfrecord_files.py  create_nfc_time_bound_marker_tfrecord_files.py  create_nighthawk_yaml.py  create_randomized_station_night_list.py  create_recording_files_csv_file.py  create_recording_schedule.py  create_species_code_classification_commands.py  (+73 more)
scripts/detector_eval/: annotate_detected_calls.py  evaluate_detectors.py  run_detectors.py  utils.py  wave_file_reader.py
scripts/old_bird_detector_eval/: annotate_old_bird_calls.py  evaluate_old_bird_detectors.py  run_old_bird_detectors.py  utils.py
scripts/pnf_energy_detector_eval/: evaluate_pnf_energy_detectors.py  run_pnf_energy_detectors.py  utils.py
src/mpg_ranch/: bat_importer.py  bat_utils.py  clips_csv_exporter.py  importer.py  mpg_ranch_importer.py  nfc_importer.py  nfc_species_classifier.py  outside_classifier.py  outside_clip_classifier.py  song_meter_audio_file_parser.py
src/old_bird/: archive_constants.py  archive_parser.py  archiver_time_keeper.py  detector.py  file_name_utils.py  wrangler_time_keeper.py
tests/: archive_shared_tests.py  archive_tests.py  archive_utils_tests.py  archiver_time_keeper_tests.py  astro_utils_tests.py  audio_file_utils_tests.py  bat_utils_tests.py  classification_command_set_utils_tests.py  classification_command_utils_tests.py  classification_commands_preset_tests.py  clip_archive_tests.py  clip_times_rug_plot_tests.py  create_usno_csv_files.py  download_usno_sun_tables.py  download_usno_tables.py  file_name_utils_tests.py  flow_layout_tests.py  mpg_ranch_importer_tests.py  mpg_ranch_nfc_importer_tests.py  multiselection_tests.py  nfc_detection_utils_tests.py  preset_manager_tests.py  recording_utils_tests.py  song_meter_audio_file_parser_tests.py  spectrogram_tests.py  station_tests.py  summarize_astro_utils_test_results.py  summarize_ephem_test_results.py  test_astro_utils.py  test_audio_file_utils.py  test_bat_utils.py  test_case.py  test_ephem.py  test_ephem_utils.py  test_nfc_classification_utils.py  test_preset_manager.py  test_recording_utils_tests.py  test_song_meter_audio_file_parser.py  test_vcl_help.py  time_utils_tests.py  (+7 more)
tests/scripts/: Archive Data.yaml  create_archive.bat  create_usno_csv_files.py  detect_and_archive.bat  detect_and_rename.bat  export_mpg_ranch_clips_csv.bat  vesper_viewer.bat
vesper/: __init__.py  archive_paths.py  archive_settings.py  external_urls.py  singletons.py  version.py
vesper/archive/: archive.py  archive_utils.py  clip_class.py  detector.py  recording.py  recording_utils.py  station.py
vesper/birdvox/: detectors.py  soundfile.py
vesper/command/: add_recording_audio_files_command.py  adjust_clips_command.py  annotator.py  archive_data_importer.py  classify_command.py  clip_audio_file_export_settings_preset.py  clip_audio_file_exporter.py  clip_audio_files_exporter.py  clip_export_settings_preset.py  clip_export_time_interval_preset.py  clip_exporter.py  clip_hdf5_file_export_settings_preset.py  clip_hdf5_file_exporter.py  clip_metadata_csv_file_exporter.py  clip_set_command.py  clip_sound_files_exporter.py  clip_table_format_preset.py  clips_hdf5_file_exporter.py  command.py  command_utils.py  create_clip_audio_files_command.py  create_clip_sound_files_command.py  create_random_clips_command.py  delete_clip_audio_files_command.py  delete_clip_sound_files_command.py  delete_clips_command.py  delete_recordings_command.py  detect_command.py  detect_random_command.py  detection_schedule_preset.py  detector_runner.py  execute_deferred_actions_command.py  export_clip_counts_by_classification_to_csv_file_command.py  export_clip_counts_by_tag_to_csv_file_command.py  export_clip_counts_to_csv_file_command.py  export_clip_tag_counts_to_csv_file_command.py  export_command.py  import_command.py  job_info.py  job_logging_manager.py  (+15 more)
vesper/django/: .gitignore  manage.py  populate_archive.py  script_header.py
vesper/ephem/: astronomical_calculator.py  ephem_utils.py  location.py  sun_moon.py  usno_altitude_azimuth_table.py  (+3 more)
(+1017 files in other folders)
