# pyproject.toml for the slim Vesper Python package
#
#
# The Slim and Full Vesper Packages
# ---------------------------------
#
# There are currently two versions of the Vesper package, a *full version*
# that includes processors (like detectors and classifiers) and all
# dependencies and a *slim version* that excludes processors and some
# dependencies. The slim version is only about 1/6 the size of the full
# version. It starts faster and uses less memory. It also uses more recent
# versions of Python and various dependencies than the full version. If you
# don't need to run processors, for example if you want to serve a cloud
# archive or you just want to run the Vesper Recorder, use the slim version.
# If you want to run processors use the full version.
#
# I plan to split the Vesper package into several smaller packages in
# the future. The new packages will include separate ones for the core
# server, processors, and the Vesper Recorder, as well as others. This
# will give users more control over which parts of Vesper they install,
# and obviate the slim/full Vesper distinction.
#
#
# Creating a Slim Vesper Development Conda Environment
# ----------------------------------------------------
#
# To create a Conda environment for developing the slim version of Vesper,
# issue the following commands from the directory containing this file:
#
#     conda create -n vesper-dev-slim -c conda-forge python=3.13
#     conda activate vesper-dev-slim
#     conda install -c conda-forge python-sounddevice h5py
#     cp pyproject_slim.toml pyproject.toml
#     pip install -e .
#     pip install bokeh build matplotlib sphinx sphinx_rtd_theme twine
#
#    
# Running Vesper Unit Tests
# -------------------------
#
# To run Django unit tests:
#
#     cd "/Users/harold/Desktop/NFC/Test Archive"
#     conda activate vesper-dev-slim
#     vesper_admin test -p "dtest_*.py" vesper.django
#
# To run non-Django unit tests:
#
#     cd /Users/harold/Documents/Code/Python/vesper/vesper
#     conda activate vesper-dev-slim
#     python -m unittest discover -s /Users/harold/Documents/Code/Python/vesper/vesper
#
# To run non-Django unit tests for just one subpackage of the `vesper` package:
#
#     cd /Users/harold/Documents/Code/Python/vesper/vesper
#     conda activate vesper-dev-slim
#     python -m unittest discover -s /Users/harold/Documents/Code/Python/vesper/vesper/<subpackage>
#    
#
# Building and Uploading the Slim Vesper Package
# ----------------------------------------------
#
# The package build and upload commands below should be issued from within
# the directory containing this file.
#
# To build the slim version of the Vesper package:
#
#     conda activate vesper-dev-slim
#     python -m build
#
# The build process will write package `.tar.gz` and `.whl` files to the
# `dist` subdirectory of the directory containing this file.
#
# To upload a built package to the test Python package index:
#
#     conda activate vesper-dev-slim
#     python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
#
# To upload a built package to the real Python package index:
#
#     conda activate vesper-dev-slim
#     python -m twine upload dist/*
#
#    
# Creating Vesper Conda Environments
# ----------------------------------
#
# To create a Conda environment using a local Vesper package:
#
#     conda create -n test -c conda-forge python=3.13
#     conda activate test
#     pip install dist/vesper_slim-<version>.tar.gz
#
# To create a Conda environment using a Vesper package from the test PyPI:
#
#     conda create -n test -c conda-forge python=3.13
#     conda activate test
#     pip install --extra-index-url https://test.pypi.org/simple/ vesper_slim
#
# To create a Conda environment using a Vesper package from the real PyPI:
#
#     conda create -n test -c conda-forge python=3.13
#     conda activate test
#     pip install vesper_slim==<version>
#
#
# Building Vesper Docker Images
# -----------------------------
#
# See the documentation in the Vesper `Dockerfile`, in the `docker` directory
# of the Vesper repository.


[project]

name = "vesper-slim"
dynamic = ["version"]

description = "Software for acoustical monitoring of nocturnal bird migration."
keywords = ["audio", "bioacoustics", "recording", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: JavaScript",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Harold Mills", email = "harold.mills@gmail.com" }
]
maintainers = [
    { name = "Harold Mills", email = "harold.mills@gmail.com" }
]

# Since we include TensorFlow in the full version of Vesper, we are
# stuck at Python 3.11 for as long as we're stuck at TensorFlow 2.12.
# See `dependencies` section below for more about TensorFlow.
requires-python = ">=3.13, <3.14"

# Vesper package dependencies. We build two versions of the Vesper package:
# a full version that includes processors and all dependencies and a slim
# version that excludes processors and some dependencies. 
dependencies = [

    # Dependencies for both the full and slim Vesper packages.
    "aioboto3",
    "daphne",
    "django~=5.2.0",
    "environs[django]",
    "jsonschema",
    "psycopg[binary]",
    "ruamel_yaml",
    "skyfield",
    "soxr",
    "whitenoise",

]

[project.scripts]
vesper_admin = "vesper.django.manage:main"
vesper_recorder = "vesper.scripts.vesper_recorder:_main"
vesper_recordex = "vesper.scripts.vesper_recordex:_main"
vesper_play_recorder_test_signal = "vesper.scripts.play_recorder_test_signal:_main"
vesper_show_audio_input_devices = "vesper.scripts.show_audio_input_devices:_main"

[project.urls]
Documentation = "https://vesper.readthedocs.io/en/latest/"
Repository = "https://github.com/HaroldMills/vesper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "vesper/version.py"

[tool.hatch.build.targets.wheel]
packages = ["vesper"]
artifacts = ["staticfiles"]
exclude = ["tests", "demos"]

[tool.hatch.build.targets.sdist]
packages = ["vesper"]
artifacts = ["staticfiles"]
exclude = ["tests", "demos"]
